按键电平检查部分完成20230722PM1116

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "arduino.h": "c",
         "freertos.h": "c",
-        "func.h": "c"
-    }
+        "func.h": "c",
+        "functional": "cpp"
+    },
+    "commentTranslate.source": "Google"
 }
